<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark1"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name2"
        android:textAlignment="center"
        android:textColor="@color/white2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        android:layout_marginTop="50dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hapticFeedbackEnabled="true"

        app:cardBackgroundColor="@color/grey2"
        app:cardCornerRadius="40dp"
        app:cardElevation="15dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_margin="1dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hapticFeedbackEnabled="true"

            app:cardBackgroundColor="@color/dark2"
            app:cardCornerRadius="40dp"
            app:cardElevation="15dp"
            android:layout_margin="1dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTextEmailAddress1"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"


                    android:minHeight="50dp"
                    android:textColor="@color/white2"
                    android:textColorHint="@color/grey1"
                    tools:ignore="DuplicateSpeakableTextCheck"

                    android:padding="10dp"


                    />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="50dp"
                    android:textColor="@color/white2"
                    android:textColorHint="@color/grey1"


                    />

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto"
                    android:minHeight="60dp"
                    android:text="@string/ingresar"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/question1"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"

                        android:text="@string/question1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white2"
                        android:textSize="15sp"

                        />

                    <TextView
                        android:id="@+id/txtRegistrate"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"


                        android:fontFamily="@font/roboto"
                        android:text="@string/registrate"
                        android:textAlignment="center"
                        android:textColor="@color/blue2"

                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hapticFeedbackEnabled="true"

        app:cardBackgroundColor="@color/grey2"
        app:cardCornerRadius="40dp"
        app:cardElevation="15dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_margin="1dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hapticFeedbackEnabled="true"

            app:cardBackgroundColor="@color/dark2"
            app:cardCornerRadius="40dp"
            app:cardElevation="15dp"
            android:layout_margin="1dp"

             >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"

                    android:text="@string/question2"
                    android:textAlignment="center"
                    android:textColor="@color/white2"
                    android:textSize="15sp"

                    />

                <EditText
                    android:id="@+id/editTextTextEmailAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:minHeight="50dp"
                    android:textColor="@color/white2"
                    android:textColorHint="@color/grey1"


                    />

                <Button
                    android:id="@+id/btnEnviarCorreo"
                    android:layout_width="171dp"
                    android:layout_height="46dp"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/roboto"
                    android:minHeight="60dp"
                    android:text="Enviar correo"
                    android:textAllCaps="false"
                    android:textColor="@color/white2"
                    android:textSize="15sp"


                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>


</LinearLayout>